// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TO CLASSNAMES, sheet NATIVE 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "color: blue /*label*/",
        ],
      },
    ],
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 20 /*nativeOnly/$native*/",
        ],
      },
    ],
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 4 /*root[0]*/",
          "padding: 4 /*root[0]*/",
        ],
      },
      Object {
        "atomicArray": Array [
          "padding: 10 /*root[1]/$native*/",
        ],
      },
    ],
    "~": "c",
  },
}
`;

exports[`TO CLASSNAMES, sheet WEB 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".d { color:blue /*label*/ }",
        ],
      },
    ],
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".a { margin:4px /*root[0]*/ }",
          ".b { padding:4px /*root[0]*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          ".c { margin:10px /*root[0]/$web*/ }",
        ],
      },
    ],
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".e { color:red /*webOnly/$web*/ }",
          ".f { padding:20px /*webOnly/$web*/ }",
        ],
      },
    ],
    "~": "c",
  },
}
`;

exports[`TO CLASSNAMES, using sheet NATIVE 1`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE: root, label, nativeOnly
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "margin: 4 /*root[0]*/",
    "padding: 4 /*root[0]*/",
    "padding: 10 /*root[1]/$native*/",
    "color: blue /*label*/",
    "margin: 20 /*nativeOnly/$native*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  Object {
    "color": "blue /*label*/",
    "margin": "20 /*nativeOnly/$native*/",
    "padding": "10 /*root[1]/$native*/",
  },
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "color": "blue",
    "margin": 20,
    "padding": 10,
  },
]
`;

exports[`TO CLASSNAMES, using sheet NATIVE 2`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE: nativeOnly, root
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "margin: 20 /*nativeOnly/$native*/",
    "margin: 4 /*root[0]*/",
    "padding: 4 /*root[0]*/",
    "padding: 10 /*root[1]/$native*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  Object {
    "margin": "4 /*root[0]*/",
    "padding": "10 /*root[1]/$native*/",
  },
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "margin": 4,
    "padding": 10,
  },
]
`;

exports[`TO CLASSNAMES, using sheet WEB 1`] = `
Array [
  "
##########################################
##########################################
#
#  WEB: root, label, webOnly
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    ".a { margin:4px /*root[0]*/ }",
    ".b { padding:4px /*root[0]*/ }",
    ".c { margin:10px /*root[0]/$web*/ }",
    ".d { color:blue /*label*/ }",
    ".e { color:red /*webOnly/$web*/ }",
    ".f { padding:20px /*webOnly/$web*/ }",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  Array [
    ".f { padding:20px /*webOnly/$web*/ }",
    ".e { color:red /*webOnly/$web*/ }",
    ".c { margin:10px /*root[0]/$web*/ }",
  ],
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "f e c",
]
`;

exports[`TO CLASSNAMES, using sheet WEB 2`] = `
Array [
  "
##########################################
##########################################
#
#  WEB: webOnly, root
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    ".e { color:red /*webOnly/$web*/ }",
    ".f { padding:20px /*webOnly/$web*/ }",
    ".a { margin:4px /*root[0]*/ }",
    ".b { padding:4px /*root[0]*/ }",
    ".c { margin:10px /*root[0]/$web*/ }",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  Array [
    ".c { margin:10px /*root[0]/$web*/ }",
    ".b { padding:4px /*root[0]*/ }",
    ".e { color:red /*webOnly/$web*/ }",
  ],
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "c b e",
]
`;
